--- a/graphql_server/Cargo.toml
+++ b/graphql_server/Cargo.toml
@@ -14,6 +14,7 @@ actix-http = "3.2.2"
 actix-web = { version = "4.2.1", default-features = false, features = [
   "macros",
 ] }
+chrono = "0.4.23"
 dotenvy = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.88"
