--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,15 @@ publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
-members = [".", "adapter_sql", "graphql_server", "domain", "migration"]
-default-members = ["graphql_server"]
+members = [
+  ".",
+  "adapter_sql",
+  "domain",
+  "graphql_schema",
+  "http_server",
+  "migration",
+]
+default-members = ["http_server", "graphql_schema"]
 
 [dependencies]
-graphql-server = { path = "graphql_server" }
+http_server = { path = "http_server" }
