--- a/http_server/Cargo.toml
+++ b/http_server/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "graphql-server"
-authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
+name = "http_server"
 version = "0.1.0"
 edition = "2021"
-publish = false
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
@@ -28,4 +28,5 @@ futures-util = "0.3.25"
 
 adapter_sql = { path = "../adapter_sql" }
 domain = { path = "../domain" }
+graphql_schema = { path = "../graphql_schema" }
 migration = { path = "../migration" }
