--- a/http_server/Cargo.toml
+++ b/http_server/Cargo.toml
@@ -20,10 +20,8 @@ dotenvy = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.88"
 argonautica = "0.2.0"
-hmac = "0.12.1"
-jwt = "0.16.0"
+jwt-simple = "0.11.2"
 nanoid = "0.4.0"
-sha2 = "0.10.6"
 futures-util = "0.3.25"
 
 adapter_sql = { path = "../adapter_sql" }
